--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -5,4 +5,57 @@
     display: inline-block;
     position: relative;
     cursor: pointer;
+    margin-top: -3.5px;
+}
+
+.copy-button {
+    width: 100px;
+    height: 30px;
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -15px;
+    text-align: center;
+    outline: none;
+    background: rgba(255, 255, 255, 0.3);
+    font-size: 1rem;
+    line-height: 30px;
+    color: white;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.ColorBox:hover .copy-button {
+    opacity: 1;
+}
+
+.box-content {
+    position: absolute;
+    width: 100;
+    left: 0;
+    bottom: 0;
+    padding: 10px;
+    color: black;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 10px;
+}
+
+.see-more {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.3);
+    color: white;
+    width: 60px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 10px;
 }
