add copied animation

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,21 @@
-* {
+*,
+*:after,
+*:before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
+    border: none;
+}
+
+body {
+    overflow: hidden;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
 }
