--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -5,7 +5,6 @@
     display: inline-block;
     position: relative;
     cursor: pointer;
-    margin-top: -3.5px;
 }
 
 .copy-button {
@@ -20,7 +19,8 @@
     text-align: center;
     outline: none;
     background: rgba(255, 255, 255, 0.3);
-    font-size: 1rem;
+    font-size: 0.8rem;
+    font-weight: bold;
     line-height: 30px;
     color: white;
     text-transform: uppercase;
@@ -58,4 +58,60 @@
     text-align: center;
     text-transform: uppercase;
     font-size: 10px;
+}
+
+.copy-overlay {
+    opacity: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s ease-in-out;
+    transform: scale(0.1);
+}
+
+.copy-overlay.show {
+    opacity: 1;
+    transform: scale(50);
+    z-index: 10;
+    position: absolute;
+}
+
+.copy-message {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0.1);
+    opacity: 0;
+    color: white;
+}
+
+.copy-message.show {
+    opacity: 1;
+    transform: scale(1);
+    z-index: 25;
+    transition: all 0.3s ease-in-out;
+    transition-delay: 0.2s;
+}
+
+.copy-message h1 {
+    font-weight: 400;
+    text-shadow: 1px 2px black;
+    background: rgba(255, 255, 255, 0.2);
+    width: 100%;
+    text-align: center;
+    margin-bottom: 0;
+    padding: 1rem;
+    font-size: 4rem;
+    text-transform: uppercase;
+}
+
+.copy-message p {
+    font-size: 2rem;
+    font-weight: 100;
 }
