--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
+
 *,
 *:after,
 *:before {
@@ -9,6 +11,7 @@
 }
 
 body {
+    font-family: 'Roboto', sans-serif;
     overflow: hidden;
 }
 
