--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -7,7 +7,8 @@
     cursor: pointer;
 }
 
-.copy-button {
+.copy-button,
+.back-button {
     width: 100px;
     height: 30px;
     position: absolute;
@@ -26,8 +27,11 @@
     text-transform: uppercase;
     border: none;
     cursor: pointer;
-    opacity: 0;
     transition: opacity 0.5s;
+}
+
+.copy-button {
+    opacity: 0;
 }
 
 .ColorBox:hover .copy-button {
@@ -114,4 +118,12 @@
 .copy-message p {
     font-size: 2rem;
     font-weight: 100;
+}
+
+.SingleColorPalette .ColorBox {
+    height: 50%;
+}
+
+.go-back {
+    background: black;
 }
