--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -34,6 +34,12 @@
     opacity: 0;
 }
 
+.more-button.dark-text,
+.copy-button.dark-text {
+    background: black;
+    color: white !important;
+}
+
 .ColorBox:hover .copy-button {
     opacity: 1;
 }
@@ -48,6 +54,15 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 10px;
+}
+
+.light-text {
+    color: white;
+}
+
+.ColorBox .dark-text {
+    color: rgba(0, 0, 0, 0.5);
+    box-shadow: none;
 }
 
 .see-more {
