--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,16 @@
 *,
 *:after,
 *:before {
-    margin: 0;
+    /* margin: 0;
     padding: 0;
     box-sizing: border-box;
     outline: none;
-    border: none;
+    border: none; */
 }
 
 body {
     font-family: 'Roboto', sans-serif;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 li {
