--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,13 @@
 *,
 *:after,
 *:before {
-    /* margin: 0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: none;
-    border: none; */
+    /* outline: none;
+    border: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; */
 }
 
 body {
