--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -1,11 +1,11 @@
-.ColorBox {
+/* .ColorBox {
     width: 20%;
     height: 25%;
     margin: 0 auto;
     display: inline-block;
     position: relative;
     cursor: pointer;
-}
+} */
 
 .copy-button,
 .back-button {
@@ -30,21 +30,21 @@
     transition: opacity 0.5s;
 }
 
-.copy-button {
+/* .copy-button {
     opacity: 0;
-}
+} */
 
-.more-button.dark-text,
+/* .more-button.dark-text,
 .copy-button.dark-text {
     background: black;
     color: white !important;
-}
+} */
 
-.ColorBox:hover .copy-button {
+/* .ColorBox:hover .copy-button {
     opacity: 1;
-}
+} */
 
-.box-content {
+/* .box-content {
     position: absolute;
     width: 100;
     left: 0;
@@ -54,7 +54,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 10px;
-}
+} */
 
 .light-text {
     color: white;
@@ -79,7 +79,7 @@
     font-size: 10px;
 }
 
-.copy-overlay {
+/* .copy-overlay {
     opacity: 0;
     z-index: 0;
     width: 100%;
@@ -93,9 +93,9 @@
     transform: scale(50);
     z-index: 10;
     position: absolute;
-}
+} */
 
-.copy-message {
+/* .copy-message {
     position: fixed;
     left: 0;
     right: 0;
@@ -108,16 +108,16 @@
     transform: scale(0.1);
     opacity: 0;
     color: white;
-}
-
+} */
+/*
 .copy-message.show {
     opacity: 1;
     transform: scale(1);
     z-index: 25;
     transition: all 0.3s ease-in-out;
     transition-delay: 0.2s;
-}
-
+} */
+/*
 .copy-message h1 {
     font-weight: 400;
     text-shadow: 1px 2px black;
@@ -128,12 +128,12 @@
     padding: 1rem;
     font-size: 4rem;
     text-transform: uppercase;
-}
-
+} */
+/*
 .copy-message p {
     font-size: 2rem;
     font-weight: 100;
-}
+} */
 
 .SingleColorPalette .ColorBox {
     height: 50%;
