--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@ code {
 
 /* some resets */
 * {
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
     box-sizing: border-box;
 }
 
@@ -24,4 +24,6 @@ a {
 
 body {
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
 }
