--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,18 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.page {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+}
+
+.fade-exit {
+    opacity: 1;
+}
+
+.fade-exit-active {
+    opacity: 0;
+    transition: 'opacity 500ms ease-out';
+}
